Style: hace responsive el componente para vw1400 y vw768

--- a/src/app/modules/auth/containers/recover-password/recover-password.component.scss
+++ b/src/app/modules/auth/containers/recover-password/recover-password.component.scss
@@ -1,15 +1,18 @@
-@import "../../../../../styles/variables.scss";
+@import "/src/styles/variables.scss";
 
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: calc(100vh - 4.875rem);
     margin-left: 108px;
     //margin-top: 50px;
 }
 
 .container-logo{
     margin-top: 60px;
+    width:672px;
+    height:296px;
 }
 
 .container-inputs{
@@ -17,7 +20,7 @@
     margin-left: 113px;
 }
 
-.continer-repite{
+.container-repite{
     margin-top: 90px;
 }
 
@@ -44,7 +47,7 @@ input{
 button{
     height: 60px;
     width: 219px;
-    border-radius: 60px;
+    border-radius: 60px ;
     background-color: $color-secondary;
     cursor: pointer;
     margin-left: 320px;
@@ -53,9 +56,53 @@ button{
     font-weight: 400;
     line-height: 36px;
     letter-spacing: 0em;
+    border: none !important;
 }
 
 button:hover{
     color: white;
+}
+
+
+@media (max-width: 1400px) {
+    .container{
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        //min-height: calc(100vh - 4.875rem); //4.875rem = 78px --> altura del footer
+    }
+    .container-logo{
+        margin-left: 108px;
+        width: 30.25rem;
+    }
+    .container-inputs{
+        margin-left: 150px;
+    }
+    input{
+        margin: 1.2rem 0 2.4rem 0;
+
+    }
+}
+
+@media (max-width: 768px) {
+    .container{
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        //min-height: calc(100vh - 4.875rem); //4.875rem = 78px --> altura del footer
+    }
+    .container-logo{
+        width: 18rem;
+        margin: 1rem 0;
+        
+    }
+    .container-inputs{
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    button{
+        margin-left: 240px;
+    }
+
 }
 
