Refactor: agrega clase container-form y cambia container-img

--- a/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/containers/forgot-password/forgot-password.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <div id="img" class="conteiner-img">
-        <img src="../../../../../assets/images/logo-MDP.svg" alt="Logo Mensajeros de la Paz" width="672px" height="296px">
+    <div id="img" >
+        <img class="container-img" src="../../../../../assets/images/logo-MDP.svg" alt="Logo Mensajeros de la Paz" >
     </div>
-    <div class="form" *ngIf="!flag">
-        <div>
+    <div class="container-form" *ngIf="!flag">
+        <div class="container-h">
             <h1 class="title">OLVIDE MI CONTRASEÑA</h1>
             <h3 class="subtitle">Ingresa tu email para <br> restaurar la contraseña</h3>
         </div>
