heroku: agrega HashLocationStrategy, LocationStrategy
para que funcionen rutas en heroku

--- a/src/app/core/layouts/components/navbar/navbar.component.html
+++ b/src/app/core/layouts/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a
         class="navbar__link"
         routerLink="./dashboard/home"
-        [routerLinkActive]="['activeRoute']"
+        routerLinkActive="activeRoute"
       >
         <svg
           class="navbar__ico-list"
@@ -180,7 +180,7 @@
       </a>
     </li>
     <li class="navbar__item">
-      <a routerLink="../" class="navbar__link">
+      <a routerLink="" class="navbar__link">
         <svg
           class="navbar__ico-list"
           alt="Icono de cerrar sesión"
