style: cambia tamaño de navbar en 1400
bruno grillo detecto en pantalla de 14' que el navbar no se visualizaba por completo por lo tanto se baja el font size a 14px para que todo el navbar se achique proporcionalmente en pantallas menores a 1400px

--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -58,11 +58,13 @@
 
 @media (max-width: 1400px) {
   .navbar {
-    top: 9.875em;
+    font-size: 14px;
+    top: 145px;
   }
 }
 @media (max-width: 768px) {
   .navbar {
-    top: 7.8125em;
+    font-size: 12px;
+    top: 115px;
   }
 }
