Feat: Agrega titulo a ejes
Diseño parcial- se agrega titulo, boton de agregar e input

--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -1,1 +1,21 @@
-p axes
+<section class="axes">
+  <h1 class="axes__title">Ejes</h1>
+  <div class="axes__container-search">
+    <button class="btn-add-axes">
+      <img
+        class="btn-add-axes__ico"
+        src="../../../../../assets/icons/List ol.svg"
+        alt="Icono de lista ordenada"
+      />
+      Agregar Ejes
+    </button>
+    <label for="search" class="lbl-search-axes">
+      <input class="lbl-search-axes__input" type="text" />
+      <img
+        class="lbl-search-axes__ico"
+        src="../../../../../assets/icons/Search.svg"
+        alt="Icono de lupa para busqueda"
+      />
+    </label>
+  </div>
+</section>
