Feat: Maqueta titulo y buscador

--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -7,7 +7,7 @@
         src="../../../../../assets/icons/List ol.svg"
         alt="Icono de lista ordenada"
       />
-      Agregar Ejes
+      <span class="btn-add-axes__text"> AGREGAR EJES </span>
     </button>
     <label for="search" class="lbl-search-axes">
       <input class="lbl-search-axes__input" type="text" />
