--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,6 +24,8 @@ $color-line-grey-dark: #79747e;
 $color-line-up-header: #1967d2;
 $color-line-down-header: #344d64;
 
+$color-4: #1e1e1e;
+
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
 $transition: 0.2s all linear;
