--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -3,6 +3,10 @@
 .axes {
   font-size: 16px;
   max-height: 71.0625em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   .axes__title {
     font-size: 30px;
     line-height: 36px;
@@ -10,14 +14,42 @@
     color: $color-text-primary;
   }
   .axes__container-search {
+    display: flex;
+    align-items: center;
     .btn-add-axes {
+      display: flex;
+      align-items: center;
+      width: 172px;
+      height: 48px;
+      background: $color-4;
+      box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.14),
+        0px 1px 10px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.2);
+      border-radius: 50px;
       .btn-add-axes__ico {
+        width: 19px;
+        margin-left: 12px;
+        margin-right: 8px;
+      }
+      .btn-add-axes__text {
+        font-family: "Roboto Md 500";
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 1.25px;
+        color: $color-white;
       }
     }
     .lbl-search-axes {
+      display: flex;
+      align-items: center;
       .lbl-search-axes__input {
+        width: 513px;
+        height: 45px;
+        border: 1px solid #979797;
+        border-radius: 8px;
+        margin: 0 30px;
       }
       .lbl-search-axes__ico {
+        width: 24px;
       }
     }
   }
