--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -9,8 +9,8 @@
       />
       <span class="btn-add-axes__text"> AGREGAR EJES </span>
     </button>
-    <label for="search" class="lbl-search-axes">
-      <input class="lbl-search-axes__input" type="text" />
+    <label for="searchAxes" class="lbl-search-axes">
+      <input class="lbl-search-axes__input" id="searchAxes" type="text" />
       <img
         class="lbl-search-axes__ico"
         src="../../../../../assets/icons/Search.svg"
@@ -18,4 +18,51 @@
       />
     </label>
   </div>
+  <section class="list-axes">
+    <table mat-table [dataSource]="dataSource" class="list-axes__table">
+      <!-- Position Column -->
+      <ng-container matColumnDef="eje">
+        <th class="list-axes__header" *matHeaderCellDef>Ejes</th>
+        <td class="list-axes__axe-cell" mat-cell *matCellDef="let element">
+          {{ element.eje }}
+        </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="centro">
+        <th class="list-axes__header" *matHeaderCellDef>
+          Centros Asociados (Iniciales)
+        </th>
+        <td class="list-axes__center-cell" mat-cell *matCellDef="let element">
+          {{ element.centro }}
+        </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="acciones">
+        <th class="list-axes__header" *matHeaderCellDef>Acciones</th>
+        <td class="list-axes__acction-cell" mat-cell *matCellDef="let element">
+          <a href="{{ element.acciones }}">
+            <img
+              class="list-axes__ico-action"
+              src="../../../../../assets/icons/Pencil.svg"
+              alt="Icono de editar"
+            />
+          </a>
+          <img
+            class="list-axes__ico-action"
+            src="../../../../../assets/icons/Trash.svg"
+            alt="icono de Eliminar"
+          />
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        class="list-axes__row"
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
+    </table>
+  </section>
 </section>
