Style: Cambia margenes del container y tamaños de celdas de la lista
Los margenes dese cambian para que el container no sea tapado por el navbar en pantallas menores a 1400px - los tamaños de celda se agustan de acuerdo al diseño figma

--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -1,68 +1,78 @@
-<section class="axes">
-  <h1 class="axes__title">Ejes</h1>
-  <div class="axes__container-search">
-    <button class="btn-add-axes">
-      <img
-        class="btn-add-axes__ico"
-        src="../../../../../assets/icons/List ol.svg"
-        alt="Icono de lista ordenada"
-      />
-      <span class="btn-add-axes__text"> AGREGAR EJES </span>
-    </button>
-    <label for="searchAxes" class="lbl-search-axes">
-      <input class="lbl-search-axes__input" id="searchAxes" type="text" />
-      <img
-        class="lbl-search-axes__ico"
-        src="../../../../../assets/icons/Search.svg"
-        alt="Icono de lupa para busqueda"
-      />
-    </label>
-  </div>
-  <section class="list-axes">
-    <table mat-table [dataSource]="dataSource" class="list-axes__table">
-      <!-- Position Column -->
-      <ng-container matColumnDef="eje">
-        <th class="list-axes__header" *matHeaderCellDef>Ejes</th>
-        <td class="list-axes__axe-cell" mat-cell *matCellDef="let element">
-          {{ element.eje }}
-        </td>
-      </ng-container>
+<section class="container-axes">
+  <div class="axes">
+    <h1 class="axes__title">Ejes</h1>
+    <div class="axes__container-search">
+      <button class="btn-add-axes">
+        <img
+          class="btn-add-axes__ico"
+          src="../../../../../assets/icons/List ol.svg"
+          alt="Icono de lista ordenada"
+        />
+        <span class="btn-add-axes__text"> AGREGAR EJES </span>
+      </button>
+      <label for="searchAxes" class="lbl-search-axes">
+        <input class="lbl-search-axes__input" id="searchAxes" type="text" />
+        <img
+          class="lbl-search-axes__ico"
+          src="../../../../../assets/icons/Search.svg"
+          alt="Icono de lupa para busqueda"
+        />
+      </label>
+    </div>
+    <section class="list-axes">
+      <table mat-table [dataSource]="dataSource" class="list-axes__table">
+        <!-- Position Column -->
+        <ng-container matColumnDef="eje">
+          <th class="list-axes__header" mat-header-cell *matHeaderCellDef>
+            Ejes
+          </th>
+          <td class="list-axes__axe-cell" mat-cell *matCellDef="let element">
+            {{ element.eje }}
+          </td>
+        </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="centro">
-        <th class="list-axes__header" *matHeaderCellDef>
-          Centros Asociados (Iniciales)
-        </th>
-        <td class="list-axes__center-cell" mat-cell *matCellDef="let element">
-          {{ element.centro }}
-        </td>
-      </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="centro">
+          <th class="list-axes__header" mat-header-cell *matHeaderCellDef>
+            Centros Asociados (Iniciales)
+          </th>
+          <td class="list-axes__center-cell" mat-cell *matCellDef="let element">
+            {{ element.centro }}
+          </td>
+        </ng-container>
 
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="acciones">
-        <th class="list-axes__header" *matHeaderCellDef>Acciones</th>
-        <td class="list-axes__acction-cell" mat-cell *matCellDef="let element">
-          <a href="{{ element.acciones }}">
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="acciones">
+          <th class="list-axes__header" mat-header-cell *matHeaderCellDef>
+            Acciones
+          </th>
+          <td
+            class="list-axes__acction-cell"
+            mat-cell
+            *matCellDef="let element"
+          >
+            <a href="{{ element.acciones }}">
+              <img
+                class="list-axes__ico-action"
+                src="../../../../../assets/icons/Pencil.svg"
+                alt="Icono de editar"
+              />
+            </a>
             <img
               class="list-axes__ico-action"
-              src="../../../../../assets/icons/Pencil.svg"
-              alt="Icono de editar"
+              src="../../../../../assets/icons/Trash.svg"
+              alt="icono de Eliminar"
             />
-          </a>
-          <img
-            class="list-axes__ico-action"
-            src="../../../../../assets/icons/Trash.svg"
-            alt="icono de Eliminar"
-          />
-        </td>
-      </ng-container>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        class="list-axes__row"
-        *matRowDef="let row; columns: displayedColumns"
-      ></tr>
-    </table>
-  </section>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr
+          mat-row
+          class="list-axes__row"
+          *matRowDef="let row; columns: displayedColumns"
+        ></tr>
+      </table>
+    </section>
+  </div>
 </section>
