--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -2,14 +2,14 @@
   <div class="axes">
     <h1 class="axes__title">Ejes</h1>
     <div class="axes__container-search">
-      <button class="btn-add-axes">
+      <a class="btn-add-axes" routerLink="../agregar-eje">
         <img
           class="btn-add-axes__ico"
           src="../../../../../assets/icons/List ol.svg"
           alt="Icono de lista ordenada"
         />
         <span class="btn-add-axes__text"> AGREGAR EJES </span>
-      </button>
+      </a>
       <label for="searchAxes" class="lbl-search-axes">
         <input class="lbl-search-axes__input" id="searchAxes" type="text" />
         <img
