--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -4,47 +4,49 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
   .axes {
-    font-size: 16px;
+    font-size: 1rem;
     width: 100%;
-    max-width: 71.0625rem;
+    max-width: 71.0625em;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 0 250px;
+    margin: 0 15.625em;
     .axes__title {
-      font-size: 30px;
-      line-height: 36px;
+      font-size: 1.875em;
+      line-height: 1.2em;
       text-align: center;
       color: $color-text-primary;
-      margin-top: 78px;
-      margin-bottom: 46px;
+      margin-top: 2.6em;
+      margin-bottom: 1.533em;
     }
     .axes__container-search {
       display: flex;
       align-items: center;
       align-self: flex-start;
       .btn-add-axes {
+        font-size: 1em;
+        text-decoration: none;
         display: flex;
         align-items: center;
-        width: 172px;
-        height: 48px;
+        width: 10.75em;
+        height: 3em;
         background: $color-4;
-        box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.14),
-          0px 1px 10px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.2);
-        border-radius: 50px;
+        box-shadow: 0em 0.25em 0.3125em rgba(0, 0, 0, 0.14),
+          0em 0.0625em 0.625em rgba(0, 0, 0, 0.12),
+          0em 0.125em 0.25em rgba(0, 0, 0, 0.2);
+        border-radius: 3.125em;
         .btn-add-axes__ico {
-          width: 19px;
-          margin-left: 12px;
-          margin-right: 8px;
+          width: 1.1875em;
+          margin-left: 0.75em;
+          margin-right: 0.5em;
         }
         .btn-add-axes__text {
           font-family: "Roboto Md 500";
-          font-size: 14px;
-          line-height: 16px;
-          letter-spacing: 1.25px;
+          font-size: 0.875em;
+          line-height: 1.142em;
+          letter-spacing: 0.0892em;
           color: $color-white;
         }
       }
@@ -52,56 +54,73 @@
         display: flex;
         align-items: center;
         .lbl-search-axes__input {
-          width: 513px;
-          height: 45px;
-          border: 1px solid #979797;
-          border-radius: 8px;
-          margin: 0 30px;
+          width: 32.0625em;
+          height: 2.8125em;
+          border: 0.0625em solid #979797;
+          border-radius: 0.5em;
+          margin: 0 1.875em;
           outline-color: $color-primary-border;
-          font-size: 16px;
-          padding: 0 20px;
+          font-size: 1em;
+          padding: 0 1.25em;
         }
         .lbl-search-axes__ico {
-          width: 24px;
+          width: 1.5em;
         }
       }
     }
     .list-axes {
       width: 100%;
-      max-width: 1137px;
+      max-width: 71.0625em;
       .list-axes__table {
         width: 100%;
         .list-axes__header {
           text-align: start;
           font-family: "Inter-700";
-          font-size: 16px;
-          line-height: 19px;
+          font-size: 1em;
+          line-height: 1.1875em;
           color: #000000;
         }
         .list-axes__header:first-of-type {
-          padding-left: 24px;
+          padding-left: 1.5em;
         }
         .list-axes__row {
           td {
             font-family: "Inter" !important;
-            font-size: 16px;
-            line-height: 19px;
+            font-size: 1em;
+            line-height: 1.1875em;
             color: #000000;
           }
         }
         .list-axes__axe-cell {
-          width: 290px;
+          width: 18.125em;
         }
 
         .list-axes__acction-cell {
-          width: 153px;
+          width: 9.5625em;
           .list-axes__ico-action {
-            padding: 10px 10px 10px 0;
-            margin-right: 17px;
+            padding: 0.625em 0.625em 0.625em 0;
+            margin-right: 1.0625em;
             cursor: pointer;
           }
         }
       }
+    }
+  }
+}
+@media (max-width: 1400px) {
+  .container-axes {
+    justify-content: flex-start;
+    .axes {
+      margin-right: 4.375em;
+      margin-left: 15.625em;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .container-axes {
+    .axes {
+      font-size: 0.875em;
+      margin-left: 14em;
     }
   }
 }
