--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,25 @@
   font-style: normal;
   font-weight: 400;
 }
+@font-face {
+  font-family: "Roboto Md 500";
+  src: url("assets/fonts/Roboto-Medium-500.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("assets/fonts/Inter-Regular-400.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Inter-700";
+  src: url("assets/fonts/Inter-Bold-700.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 700;
+}
+
 .mat-checkbox-inner-container {
   height: 1.5rem !important;
   width: 1.5rem !important;
@@ -30,7 +49,7 @@
 // Define a custom typography config that overrides the font-family as well as the
 // `headlines` and `body-1` levels.
 $custom-typography: mat-typography-config(
-  $font-family: '"Futura Bk BT", Roboto, monospace',
+  $font-family: '"Futura Bk BT", Roboto, monospace, Inter',
   $headline: mat-typography-level(48px, 57px, 400),
   $title: mat-typography-level(36px, 44px, 400),
   $subheading-2: mat-typography-level(32px, 39px, 400),
