--- a/src/app/modules/admin/containers/axes/axes.component.html
+++ b/src/app/modules/admin/containers/axes/axes.component.html
@@ -2,7 +2,7 @@
   <div class="axes">
     <h1 class="axes__title">Ejes</h1>
     <div class="axes__container-search">
-      <a class="btn-add-axes" routerLink="../agregar-eje">
+      <a class="btn-add-axes" routerLink="agregar-eje">
         <img
           class="btn-add-axes__ico"
           src="../../../../../assets/icons/List ol.svg"
