--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,20 +90,52 @@ $mdp-pallet-primary: (
 );
 /* For use in src/lib/core/theming/_palette.scss */
 $mdp-pallet-accent: (
-  50: #fefce0,
-  100: #fdf7b3,
-  200: #fbf280,
-  300: #f9ed4d,
-  400: #f8e926,
-  500: #f7e500,
-  600: #f6e200,
-  700: #f5de00,
-  800: #f3da00,
-  900: #f1d300,
+  50: #e0eff8,
+  100: #b3d7ec,
+  200: #80bde0,
+  300: #4da2d4,
+  400: #268eca,
+  500: #007ac1,
+  600: #0072bb,
+  700: #0067b3,
+  800: #005dab,
+  900: #004a9e,
+  A100: #c9deff,
+  A200: #96bfff,
+  A400: #63a1ff,
+  A700: #4991ff,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #ffffff,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000,
+  ),
+);
+$mdp-pallet-warn: (
+  50: #f2f9fd,
+  100: #def0fa,
+  200: #c9e6f7,
+  300: #b3dcf4,
+  400: #a2d5f1,
+  500: #92cdef,
+  600: #8ac8ed,
+  700: #7fc1eb,
+  800: #75bae8,
+  900: #63aee4,
   A100: #ffffff,
-  A200: #fffbe5,
-  A400: #fff4b2,
-  A700: #fff098,
+  A200: #ffffff,
+  A400: #ebf7ff,
+  A700: #d2ecff,
   contrast: (
     50: #000000,
     100: #000000,
