--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,8 @@ $color-line-up-header: #1967d2;
 $color-line-down-header: #344d64;
 
 $color-4: #1e1e1e;
+$btn-confirm-bg: #92cdef;
+$outline-focus: #8ac9ee;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
 
