--- a/src/app/modules/admin/containers/am-user/am-user.component.scss
+++ b/src/app/modules/admin/containers/am-user/am-user.component.scss
@@ -8,6 +8,8 @@
     margin-top: 59px;
 }
 
+
+
 form {
     display: flex;
     flex-direction: column;
@@ -20,6 +22,12 @@ form {
     bottom: 37.51%;
 
     background: #FFFFFF;
+}
+
+section{
+    width: 549px;
+    height: 83px;
+    margin-bottom: 12px;
 }
 
 label {
