Style: cambia margin top del title para vw 1400
de esta forma queda mejor alineado en pantallas menores a 1400px

--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -153,6 +153,7 @@
       margin-right: 4.375em;
       margin-left: 15.625em;
       .axes__title {
+        margin-top: 40px;
         padding-right: 180px; //centra el titulo alineado con el logo del header
       }
     }
