--- a/src/app/modules/admin/containers/users/users.component.scss
+++ b/src/app/modules/admin/containers/users/users.component.scss
@@ -35,7 +35,7 @@ h1 {
     color: #000000;
 }
 
-button {
+.button-createUser {
     font-family: 'Roboto' !important;
     font-style: normal;
     font-weight: 500;
@@ -110,7 +110,7 @@ td {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
-.mat-card-user-data{
+.mat-card-user-data {
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -119,8 +119,54 @@ a {
     cursor: pointer;
 }
 
-.icon-edit{
+.icon-edit {
     margin-right: 10px;
+}
+
+.label-userCreate {
+    justify-content: center;
+    align-items: center;
+    padding: 16px 8px 8px 24px;
+    position: absolute;
+    background: #FFFFFF;
+    box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.14), 0px 6px 30px rgba(0, 0, 0, 0.12), 0px 8px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 4px
+}
+
+.label {
+    width: 623px;
+    height: 300px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: 0.25px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.containerButtonClose {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.buttonClose {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    color: #007AC1;
+    width: 76px;
+    height: 36px;
+    border-radius: 4px;
 }
 
 
